# bifrost

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/bifrost/: di.py
src/bifrost/cli/: app.py  configure_cmd.py  logs_cmd.py  run_cmd.py  ssh_cmd.py  status_cmd.py
src/bifrost/commands/config/: __init__.py  add.py  command.py  edit.py  list.py  remove.py  set_default.py
src/bifrost/commands/pipeline/: __init__.py  add.py  command.py  edit.py  list.py  remove.py
src/bifrost/commands/run/: __init__.py  command.py  errors.py  runner.py
src/bifrost/commands/ssh/: __init__.py  command.py
src/bifrost/commands/status/: __init__.py  command.py
src/bifrost/core/: config.py  configure.py  errors.py  models.py  runner.py
src/bifrost/infra/: __init__.py  ci_gate.py  copy.py  git_ops.py  git_remote.py  log_store.py  pipeline_gate.py  ssh.py  utils.py
src/bifrost/shared/: __init__.py  config_manager.py  errors.py  models.py
tests/: conftest.py
tests/cli/: test_configure_cmd.py
tests/core/: test_config.py  test_configure.py  test_models.py  test_runner.py
tests/infra/: test_ci_gate.py  test_copy.py  test_ssh.py
tests/unit_tests/cli/: test_config_commands.py  test_run_command.py  test_ssh_command.py  test_status_commands.py
tests/unit_tests/commands/config/: test_add.py  test_edit.py  test_list.py  test_remove.py  test_set_default.py
tests/unit_tests/commands/pipeline/: __init__.py  test_edit.py
tests/unit_tests/commands/run/: test_runner.py
tests/unit_tests/infra/: test_log_store.py  test_pipeline_gate.py  test_ssh.py
tests/unit_tests/shared/: test_config_manager.py  test_models.py
